# Jilag

./: .gitignore  CMakeLists.txt  TODO  main.cpp
include/: dsa.hpp  nsa.hpp
libfsa/: CMakeLists.txt  TODO
libfsa/include/: dsa.hpp  index_tree.hpp  nsa.hpp  state_transition_table.hpp
libfsa/src/: dsa.cpp  nsa.cpp
libre/: CMakeLists.txt  Regex.cpp
libre/include/: Regex.hpp  lex_cases.hpp  lex_constants.hpp  parser.hpp  parser2.hpp
libre/src/: main.cpp  parser.cpp  parser2.cpp
src/: dsa.cpp  index_tree.cpp  nsa.cpp
tests/: CMakeLists.txt
tests/libfsa.tests/: CMakeLists.txt  CMakeLists.txt~  fsa.cpp  fsa_state_test.cpp  main.cpp  re_test.cpp  re_test2.cpp  re_test3.cpp
